# patchyColloids2014

./: .gitignore  CMakeLists.txt  README  colloid.c  colloid.h  config.h  distance.c  distance.h  doxy.conf  headers.h  initialize.c  initialize.h  load_config.c  load_config.h  monte_carlo.c  monte_carlo.h  mt19937ar.c  mt19937ar.h  parameters.h  patchy_main.c  random.h  statistics.c  statistics.h  threaded.c  threaded.h
auswertungstools/: density_time.py  integrate.py  perc_threshold.c  perc_threshold_2.c  radial_distribution_function.c  radial_paths.py  testmovie.xyz  threshold.py
dSFMT/: dSFMT-params.h
dSFMT/html/: cpuinfo  cpuinfo_xt
statistics/: radial_paths-new.py  radial_paths.py  test.csv
